Combine Capabilities+Appliers, add 8.3 third party module support.
Combine Capabilities+Appliers, add 8.3 third party module support.
Fix module.xml parsing
force line endings
force spotless format version